test/spec_vectors/load/fail/module_42.wat
(module (memory 0) (func $type-address-empty (i32.load) (drop)))